--- a/Fedex_logistics_performance_analysis.ipynb
+++ b/Fedex_logistics_performance_analysis.ipynb
@@ -107,7 +107,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "https://github.com/teknas777/Module2_Capstone_Project/blob/main/Fedex_logistics_performance_analysis.ipynb"
+      ],
       "metadata": {
         "id": "DygNZgRt6dYA"
       }
